--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="grid">
     <!-- 20 ebook items -->
     <div class="item" data-book-id="1">
-      <img src="placeholder-black.png" alt="Cover 1" />
+      <img src="covers/cover-1.webp" alt="Cover 1" />
       <button class="read">Read</button>
     </div>
     <div class="item" data-book-id="2">
