--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,113 +5,197 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Classy Femininity</title>
   <style>
-    body, h1, button { margin:0; font-family: sans-serif; }
-    .grid { display:grid; grid-template-columns:1fr 1fr; gap:10px; padding:10px; }
-    .item { text-align:center; }
-    .item img { width:100%; height:auto; background:#000; }
+    /* Reset & basic layout */
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    html, body { height: 100%; font-family: sans-serif; }
+    body { display: flex; flex-direction: column; }
+
+    /* Header */
+    header {
+      padding: 16px;
+      text-align: center;
+      font-family: 'Playfair Display', serif;
+      font-size: 1.5rem;
+    }
+
+    /* Grid of ebooks */
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 12px;
+      padding: 12px;
+      flex: 1;               /* allow scrolling */
+      overflow-y: auto;
+      margin-bottom: 60px;   /* space for bottom nav */
+    }
+    .item {
+      text-align: center;
+    }
+    .item img {
+      width: 100%;
+      height: auto;
+      background: #000;      /* placeholder background */
+    }
     .item button {
-      margin-top:5px;
-      padding:8px 12px;
-      background:#b20235;
-      color:#fff;
-      border:none;
-      border-radius:4px;
-      cursor:pointer;
+      margin-top: 8px;
+      padding: 8px 16px;
+      background: #b20235;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+
+    /* Bottom navigation */
+    .bottom-nav {
+      position: fixed;
+      bottom: 0; left: 0;
+      width: 100%; height: 60px;
+      background: #fff;
+      border-top: 1px solid #e0e0e0;
+      display: flex;
+    }
+    .bottom-nav button {
+      flex: 1;
+      border: none;
+      background: none;
+      font-size: 1rem;
+      color: #555;
+      cursor: pointer;
+    }
+    .bottom-nav button.active {
+      color: #b20235;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1 style="text-align:center; padding:16px;">Classy Femininity</h1>
+  <header>Classy Femininity</header>
+
   <div class="grid">
-    <!-- 20 ebook items -->
+    <!-- Slot 1 -->
     <div class="item" data-book-id="1">
-      <img src="covers/cover-1.webp" alt="Cover 1" />
+      <img src="covers/cover-1.webp" alt="Cover 1">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 2 -->
     <div class="item" data-book-id="2">
-      <img src="placeholder-black.png" alt="Cover 2" />
+      <img src="covers/cover-2.webp" alt="Cover 2">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 3 -->
     <div class="item" data-book-id="3">
-      <img src="placeholder-black.png" alt="Cover 3" />
+      <img src="covers/cover-3.webp" alt="Cover 3">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 4 -->
     <div class="item" data-book-id="4">
-      <img src="placeholder-black.png" alt="Cover 4" />
+      <img src="covers/cover-4.webp" alt="Cover 4">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 5 -->
     <div class="item" data-book-id="5">
-      <img src="placeholder-black.png" alt="Cover 5" />
+      <img src="covers/cover-5.webp" alt="Cover 5">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 6 -->
     <div class="item" data-book-id="6">
-      <img src="placeholder-black.png" alt="Cover 6" />
+      <img src="covers/cover-6.webp" alt="Cover 6">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 7 -->
     <div class="item" data-book-id="7">
-      <img src="placeholder-black.png" alt="Cover 7" />
+      <img src="covers/cover-7.webp" alt="Cover 7">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 8 -->
     <div class="item" data-book-id="8">
-      <img src="placeholder-black.png" alt="Cover 8" />
+      <img src="covers/cover-8.webp" alt="Cover 8">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 9 -->
     <div class="item" data-book-id="9">
-      <img src="placeholder-black.png" alt="Cover 9" />
+      <img src="covers/cover-9.webp" alt="Cover 9">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 10 -->
     <div class="item" data-book-id="10">
-      <img src="placeholder-black.png" alt="Cover 10" />
+      <img src="covers/cover-10.webp" alt="Cover 10">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 11 -->
     <div class="item" data-book-id="11">
-      <img src="placeholder-black.png" alt="Cover 11" />
+      <img src="covers/cover-11.webp" alt="Cover 11">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 12 -->
     <div class="item" data-book-id="12">
-      <img src="placeholder-black.png" alt="Cover 12" />
+      <img src="covers/cover-12.webp" alt="Cover 12">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 13 -->
     <div class="item" data-book-id="13">
-      <img src="placeholder-black.png" alt="Cover 13" />
+      <img src="covers/cover-13.webp" alt="Cover 13">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 14 -->
     <div class="item" data-book-id="14">
-      <img src="placeholder-black.png" alt="Cover 14" />
+      <img src="covers/cover-14.webp" alt="Cover 14">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 15 -->
     <div class="item" data-book-id="15">
-      <img src="placeholder-black.png" alt="Cover 15" />
+      <img src="covers/cover-15.webp" alt="Cover 15">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 16 -->
     <div class="item" data-book-id="16">
-      <img src="placeholder-black.png" alt="Cover 16" />
+      <img src="covers/cover-16.webp" alt="Cover 16">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 17 -->
     <div class="item" data-book-id="17">
-      <img src="placeholder-black.png" alt="Cover 17" />
+      <img src="covers/cover-17.webp" alt="Cover 17">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 18 -->
     <div class="item" data-book-id="18">
-      <img src="placeholder-black.png" alt="Cover 18" />
+      <img src="covers/cover-18.webp" alt="Cover 18">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 19 -->
     <div class="item" data-book-id="19">
-      <img src="placeholder-black.png" alt="Cover 19" />
+      <img src="covers/cover-19.webp" alt="Cover 19">
       <button class="read">Read</button>
     </div>
+    <!-- Slot 20 -->
     <div class="item" data-book-id="20">
-      <img src="placeholder-black.png" alt="Cover 20" />
+      <img src="covers/cover-20.webp" alt="Cover 20">
       <button class="read">Read</button>
     </div>
   </div>
 
+  <nav class="bottom-nav">
+    <button class="active" data-target="ebooks">Ebooks</button>
+    <button data-target="chat">AI Chat Box</button>
+    <button data-target="decoder">Man Decoder</button>
+  </nav>
+
   <script>
+    // bottom nav handler
+    document.querySelectorAll('.bottom-nav button').forEach(btn => {
+      btn.onclick = () => {
+        window.location.href = btn.dataset.target + '.html';
+      };
+    });
+
+    // read buttons
     document.querySelectorAll('.read').forEach(btn => {
-      btn.addEventListener('click', () => {
+      btn.onclick = () => {
         const id = btn.closest('.item').dataset.bookId;
         window.location.href = `reader.html?book=${id}`;
-      });
+      };
     });
   </script>
 </body>
