--- a/reader.html
+++ b/reader.html
@@ -1,89 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Reader — Classy Femininity</title>
   <style>
-    html, body { height:100%; margin:0; }
-    body { position:relative; }
-    #canvas { width:100%; display:block; }
-    /* Loader overlay */
+    html,body {height:100%;margin:0;}
+    body {position:relative;}
+    #canvas {width:100%;display:block;}
     #loader {
-      position:fixed; top:0; left:0; right:0; bottom:0;
+      position:fixed;top:0;left:0;right:0;bottom:0;
       background:rgba(255,255,255,0.9);
-      display:flex; align-items:center; justify-content:center;
+      display:flex;align-items:center;justify-content:center;
       z-index:1000;
     }
     .spinner {
       border:6px solid #eee;
       border-top:6px solid #b20235;
       border-radius:50%;
-      width:50px; height:50px;
+      width:48px;height:48px;
       animation:spin 1s linear infinite;
     }
-    @keyframes spin { to { transform:rotate(360deg); } }
-    /* Paywall overlay */
-    #paywall {
-      position:fixed; top:0; left:0; right:0; bottom:0;
-      background:rgba(0,0,0,0.8);
-      color:#fff;
-      display:none;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      text-align:center;
-      padding:20px;
-      z-index:1001;
-    }
-    #paywall button {
-      margin:10px;
-      padding:10px 20px;
-      background:#b20235;
-      color:#fff;
-      border:none;
-      border-radius:4px;
-      cursor:pointer;
-      font-size:1rem;
-    }
-    /* Prev/Next controls */
-    .nav {
-      position:fixed; bottom:10px; left:50%;
-      transform:translateX(-50%);
-      background:rgba(255,255,255,0.8);
-      padding:8px 12px;
-      border-radius:4px;
-      z-index:500;
-    }
-    .nav button {
-      margin:0 5px; padding:6px 10px;
-      background:#b20235; color:#fff;
-      border:none; border-radius:4px;
-      cursor:pointer;
-    }
-    .nav span { margin:0 8px; font-family:sans-serif; }
+    @keyframes spin {to{transform:rotate(360deg)}}
+    .nav {position:fixed;bottom:10px;left:50%;transform:translateX(-50%);
+          background:rgba(255,255,255,0.8);padding:8px 12px;border-radius:4px;z-index:500;}
+    .nav button{margin:0 5px;padding:6px 10px;background:#b20235;color:#fff;border:none;
+                border-radius:4px;cursor:pointer;}
+    .nav span{margin:0 8px;font-family:sans-serif;}
   </style>
 
-  <!-- 1) PDF.js from CDN -->
+  <!-- PDF.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-  <!-- 2) Paddle.js -->
-  <script src="https://cdn.paddle.com/paddle/v2/paddle.js"></script>
 </head>
 <body>
-  <!-- Loader -->
+
   <div id="loader"><div class="spinner"></div></div>
-
-  <!-- PDF canvas -->
   <canvas id="canvas"></canvas>
-
-  <!-- Paywall -->
-  <div id="paywall">
-    <p>You’ve reached your free preview (5 pages).<br/>Subscribe to continue reading.</p>
-    <button id="monthly-btn">Subscribe Monthly</button>
-    <button id="yearly-btn">Subscribe Yearly</button>
-  </div>
-
-  <!-- Prev/Next -->
   <div class="nav">
     <button id="prev">◀ Prev</button>
     <span id="page-num">1</span> / <span id="page-count">?</span>
@@ -91,69 +42,32 @@
   </div>
 
   <script>
-    // ====== 3) YOUR VARIABLES HERE ======
-    // Replace with your Paddle Vendor ID (from Settings → Account Details)
-    const PADDLE_VENDOR_ID   = 231536;
-    // Copy these from the Paddle UI after creating your subscription prices
-    const PADDLE_MONTHLY_ID  = 'pri_01jvt7hbtn145k3jm1em2w8eme';
-    const PADDLE_YEARLY_ID   = 'pri_01jvt7mqrtaxmheszs3afz8ex0';
-    // ====================================
-
-    // Initialize Paddle
-    Paddle.Setup({ vendor: PADDLE_VENDOR_ID });
-
-    // Check subscription flag
-    function isSubscribed() {
-      return localStorage.getItem('subscribed') === 'true';
-    }
-
-    // Handle subscription buttons
-    document.getElementById('monthly-btn').onclick = () => {
-      Paddle.Checkout.open({ product: PADDLE_MONTHLY_ID });
-    };
-    document.getElementById('yearly-btn').onclick = () => {
-      Paddle.Checkout.open({ product: PADDLE_YEARLY_ID });
-    };
-
-    // On successful checkout
-    Paddle.Checkout.Register('Checkout.Complete', data => {
-      if (data.checkout && data.checkout.completed) {
-        localStorage.setItem('subscribed','true');
-        document.getElementById('paywall').style.display = 'none';
-        queueRenderPage(pageNum);
-      }
-    });
-
-    // ===== PDF.js Setup =====
+    // 1) Worker setup
     pdfjsLib.GlobalWorkerOptions.workerSrc =
       'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
 
-    const params = new URLSearchParams(window.location.search);
+    // 2) Figure out which book
+    const params = new URLSearchParams(location.search);
     const bookId = params.get('book') || '1';
     const pdfUrl = `ebooks/book-${bookId}.pdf`;
 
-    let pdfDoc = null,
-        pageNum = 1,
-        pageIsRendering = false,
-        pageNumPending = null;
+    console.log('Attempting to load PDF from:', pdfUrl);
 
-    const canvas = document.getElementById('canvas'),
-          ctx    = canvas.getContext('2d');
+    let pdfDoc = null, pageNum = 1, pageIsRendering = false, pageNumPending = null;
+    const canvas = document.getElementById('canvas'), ctx = canvas.getContext('2d');
+    const loader = document.getElementById('loader');
 
-    // Render a given page
+    // Show/hide loader
+    function showLoader(show) {
+      loader.style.display = show ? 'flex' : 'none';
+    }
+
+    // Render a page
     function renderPage(num) {
-      // Gate after page 5 if not subscribed
-      if (num > 5 && !isSubscribed()) {
-        document.getElementById('paywall').style.display = 'flex';
-        return;
-      }
-      document.getElementById('paywall').style.display = 'none';
-
       pageIsRendering = true;
       pdfDoc.getPage(num).then(page => {
         const vp = page.getViewport({ scale: 1.5 });
-        canvas.height = vp.height;
-        canvas.width  = vp.width;
+        canvas.height = vp.height; canvas.width = vp.width;
         page.render({ canvasContext: ctx, viewport: vp }).promise.then(() => {
           pageIsRendering = false;
           if (pageNumPending !== null) {
@@ -165,37 +79,36 @@
       });
     }
 
-    // Queue rendering if one page is already rendering
     function queueRenderPage(num) {
       if (pageIsRendering) pageNumPending = num;
       else renderPage(num);
     }
 
-    // Prev/Next handlers
+    // Prev/Next
     document.getElementById('prev').onclick = () => {
       if (pageNum <= 1) return;
-      pageNum--;
-      queueRenderPage(pageNum);
+      pageNum--; queueRenderPage(pageNum);
     };
     document.getElementById('next').onclick = () => {
       if (pageNum >= pdfDoc.numPages) return;
-      pageNum++;
-      queueRenderPage(pageNum);
+      pageNum++; queueRenderPage(pageNum);
     };
 
-    // Load the PDF
+    // 3) Load the PDF
+    showLoader(true);
     pdfjsLib.getDocument(pdfUrl).promise
       .then(pdf => {
+        console.log('PDF loaded, page count:', pdf.numPages);
         pdfDoc = pdf;
         document.getElementById('page-count').textContent = pdf.numPages;
-        document.getElementById('loader').style.display = 'none';
+        showLoader(false);
         renderPage(pageNum);
       })
       .catch(err => {
-        console.error('PDF load error:', err);
-        document.getElementById('loader').style.display = 'none';
+        console.error('PDF.js error:', err);
+        showLoader(false);
         document.body.innerHTML = `
-          <p style="padding:20px; text-align:center; color:red;">
+          <p style="padding:20px;text-align:center;color:red;">
             Could not load PDF (book ${bookId}): ${err.message}
           </p>`;
       });
