--- a/reader.html
+++ b/reader.html
@@ -1,38 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Reader — Classy Femininity</title>
   <style>
-    html,body {height:100%;margin:0;}
-    body {position:relative;}
-    #canvas {width:100%;display:block;}
+    html, body { height:100%; margin:0; }
+    body { position:relative; }
+    #canvas { width:100%; display:block; }
+    /* Loader overlay */
     #loader {
-      position:fixed;top:0;left:0;right:0;bottom:0;
+      position:fixed; top:0; left:0; right:0; bottom:0;
       background:rgba(255,255,255,0.9);
-      display:flex;align-items:center;justify-content:center;
+      display:flex; align-items:center; justify-content:center;
       z-index:1000;
     }
     .spinner {
       border:6px solid #eee;
       border-top:6px solid #b20235;
       border-radius:50%;
-      width:48px;height:48px;
+      width:48px; height:48px;
       animation:spin 1s linear infinite;
     }
-    @keyframes spin {to{transform:rotate(360deg)}}
-    .nav {position:fixed;bottom:10px;left:50%;transform:translateX(-50%);
-          background:rgba(255,255,255,0.8);padding:8px 12px;border-radius:4px;z-index:500;}
-    .nav button{margin:0 5px;padding:6px 10px;background:#b20235;color:#fff;border:none;
-                border-radius:4px;cursor:pointer;}
-    .nav span{margin:0 8px;font-family:sans-serif;}
+    @keyframes spin { to { transform:rotate(360deg); } }
+    /* Prev/Next controls */
+    .nav {
+      position:fixed; bottom:10px; left:50%;
+      transform:translateX(-50%);
+      background:rgba(255,255,255,0.8);
+      padding:8px 12px; border-radius:4px;
+      z-index:500;
+    }
+    .nav button {
+      margin:0 5px; padding:6px 10px;
+      background:#b20235; color:#fff;
+      border:none; border-radius:4px; cursor:pointer;
+    }
+    .nav span { margin:0 8px; font-family:sans-serif; }
+    /* Error message */
+    .error {
+      padding:20px;
+      text-align:center;
+      color:red;
+      font-family:sans-serif;
+    }
   </style>
-
-  <!-- PDF.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
 </head>
 <body>
-
   <div id="loader"><div class="spinner"></div></div>
   <canvas id="canvas"></canvas>
   <div class="nav">
@@ -41,77 +55,94 @@
     <button id="next">Next ▶</button>
   </div>
 
+  <!-- 1) PDF.js library -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
+
   <script>
-    // 1) Worker setup
-    pdfjsLib.GlobalWorkerOptions.workerSrc =
-      'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
+    window.addEventListener('load', () => {
+      // 2) Worker setup
+      pdfjsLib.GlobalWorkerOptions.workerSrc =
+        'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
 
-    // 2) Figure out which book
-    const params = new URLSearchParams(location.search);
-    const bookId = params.get('book') || '1';
-    const pdfUrl = `ebooks/book-${bookId}.pdf`;
+      // 3) Determine which book to load
+      const params = new URLSearchParams(location.search);
+      const bookId = params.get('book') || '1';
+      const pdfUrl = `/ebooks/book-${bookId}.pdf`;
+      console.log('📥 Checking PDF:', pdfUrl);
 
-    console.log('Attempting to load PDF from:', pdfUrl);
+      // Utility to show/hide loader
+      const loader = document.getElementById('loader');
+      function showLoader(on) {
+        loader.style.display = on ? 'flex' : 'none';
+      }
 
-    let pdfDoc = null, pageNum = 1, pageIsRendering = false, pageNumPending = null;
-    const canvas = document.getElementById('canvas'), ctx = canvas.getContext('2d');
-    const loader = document.getElementById('loader');
-
-    // Show/hide loader
-    function showLoader(show) {
-      loader.style.display = show ? 'flex' : 'none';
-    }
-
-    // Render a page
-    function renderPage(num) {
-      pageIsRendering = true;
-      pdfDoc.getPage(num).then(page => {
-        const vp = page.getViewport({ scale: 1.5 });
-        canvas.height = vp.height; canvas.width = vp.width;
-        page.render({ canvasContext: ctx, viewport: vp }).promise.then(() => {
-          pageIsRendering = false;
-          if (pageNumPending !== null) {
-            renderPage(pageNumPending);
-            pageNumPending = null;
-          }
+      // 4) First HEAD-check the PDF exists
+      fetch(pdfUrl, { method: 'HEAD' })
+        .then(res => {
+          if (!res.ok) throw new Error(`HTTP ${res.status}`);
+          console.log('✅ PDF found, loading document...');
+          // 5) Load with PDF.js
+          return pdfjsLib.getDocument(pdfUrl).promise;
+        })
+        .then(pdf => {
+          console.log('📄 PDF loaded, pages:', pdf.numPages);
+          document.getElementById('page-count').textContent = pdf.numPages;
+          showLoader(false);
+          initializeViewer(pdf);
+        })
+        .catch(err => {
+          console.error('❌ PDF load error:', err);
+          showLoader(false);
+          document.body.innerHTML = `<p class="error">Could not load PDF (book ${bookId}): ${err.message}</p>`;
         });
-        document.getElementById('page-num').textContent = num;
-      });
-    }
 
-    function queueRenderPage(num) {
-      if (pageIsRendering) pageNumPending = num;
-      else renderPage(num);
-    }
+      // 6) Initialize paging once PDF is ready
+      function initializeViewer(pdfDoc) {
+        let pageNum = 1,
+            pageIsRendering = false,
+            pageNumPending = null;
 
-    // Prev/Next
-    document.getElementById('prev').onclick = () => {
-      if (pageNum <= 1) return;
-      pageNum--; queueRenderPage(pageNum);
-    };
-    document.getElementById('next').onclick = () => {
-      if (pageNum >= pdfDoc.numPages) return;
-      pageNum++; queueRenderPage(pageNum);
-    };
+        const canvas = document.getElementById('canvas'),
+              ctx    = canvas.getContext('2d');
 
-    // 3) Load the PDF
-    showLoader(true);
-    pdfjsLib.getDocument(pdfUrl).promise
-      .then(pdf => {
-        console.log('PDF loaded, page count:', pdf.numPages);
-        pdfDoc = pdf;
-        document.getElementById('page-count').textContent = pdf.numPages;
-        showLoader(false);
+        function renderPage(num) {
+          pageIsRendering = true;
+          pdfDoc.getPage(num).then(page => {
+            const viewport = page.getViewport({ scale: 1.5 });
+            canvas.height = viewport.height;
+            canvas.width  = viewport.width;
+            page.render({ canvasContext: ctx, viewport })
+                .promise.then(() => {
+                  pageIsRendering = false;
+                  if (pageNumPending !== null) {
+                    renderPage(pageNumPending);
+                    pageNumPending = null;
+                  }
+                });
+            document.getElementById('page-num').textContent = num;
+          });
+        }
+
+        function queueRenderPage(num) {
+          if (pageIsRendering) pageNumPending = num;
+          else renderPage(num);
+        }
+
+        document.getElementById('prev').onclick = () => {
+          if (pageNum <= 1) return;
+          pageNum--;
+          queueRenderPage(pageNum);
+        };
+        document.getElementById('next').onclick = () => {
+          if (pageNum >= pdfDoc.numPages) return;
+          pageNum++;
+          queueRenderPage(pageNum);
+        };
+
+        // Render first page
         renderPage(pageNum);
-      })
-      .catch(err => {
-        console.error('PDF.js error:', err);
-        showLoader(false);
-        document.body.innerHTML = `
-          <p style="padding:20px;text-align:center;color:red;">
-            Could not load PDF (book ${bookId}): ${err.message}
-          </p>`;
-      });
+      }
+    });
   </script>
 </body>
 </html>
